# bayesian-anomaly-and-fault-detection-in-sensor-data

./: README.md  pyproject.toml
data/: merged_activity_labels.csv
data/train/: y_train_mapped.txt
notebooks/01_describe data/: 01_load_data.ipynb  03_redefine_label_mapping.ipynb
notebooks/01_describe_data/: 01_load_data.ipynb  02_redefine_class_mapping.ipynb  04_NB_pre_checks.ipynb
notebooks/02_bayesian_ logistic_regression/: 01_implementation.ipynb
