[project]
name="fault_detection_sensor_data"
version="0.0.1"
requires-python = ">=3.12"

dependencies=[
    "arviz>=0.23.1",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.2",
    "path>=17.1.1",
    "pymc>=5.26.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
]
